<resources>
    <string name="app_name">Evaluacon3APMobiles</string>
    <string name="btnAcceso">Iniciar sesión</string>
    <string name="btnRecuperar">¿Se olvidó la contraseña?</string>
    <string name="tiextNombreUsuario">Nombre de usuario</string>
    <string name="tiextPassword">Contraseña</string>
    <string name="textView2">¿Listos para acceder el usuario?</string>
    <string name="tiextCorreo">Correo</string>
    <string name="tvTitulo">Cambiar la contraseña del usuario.</string>
    <string name="btnRegistrar">Registrar usuario</string>
    <string name="tvTituloRegister">Registrando usuario.</string>
    <string name="etNombre">Nombre</string>
    <string name="etNameUser">Apodo del usuario</string>
    <string name="etEmail">Correo electrónico</string>
    <string name="etPassword">Contraseña</string>
    <string name="tiPregunta">Pregunta de seguridad.</string>
    <string name="etRespuestas">Respuesta de seguridad</string>
    <string name="btnRegistrarUsuario">Registrar usuario</string>
    <string name="tiedTitulo">Titulo</string>
    <string name="tiedImportancia">Importancia</string>
    <string name="tiedObservacion">Observacion</string>
    <string name="tiedLugar">Lugar del evento</string>
    <string name="tiedFecha">Fecha del evento</string>
    <string name="tiedTiempo">Tiempo de aviso</string>
    <string name="btnCapturaEvento">Evento registrar</string>
</resources>